--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/firebase-debug.log
 
 # testing
 /coverage
@@ -23,4 +24,4 @@ yarn-debug.log*
 yarn-error.log*
 
 #web
-web/firebase.config.js
+/src/firebase.config.js
