--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-/firebase-debug.log
 
 # testing
 /coverage
@@ -23,5 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#web
-firebase.config.js/
+.firebase/build/node_modules/public/src/firebase.config.js
+
