--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.firebase/build/node_modules/public/src/firebase.config.js
+src/firebase.config.js
+
 
